// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`English language Empty input 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Electric Toothbrush",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Vacuum Compression Storage Bags",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Lightning to USB A Cable",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "AA 1.5 Alkaline Batteries — Pack of 12",
  },
]
`;

exports[`English language Equality 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "[Electric] [Toothbrush]",
  },
]
`;

exports[`English language Partiles 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Electric [To]othbrush",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Lightning [to] USB A Cable",
  },
]
`;

exports[`English language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "[AA] 1.5 Alkaline [Batteri]es — Pack of 12",
  },
]
`;
